# datetimecpp

./: CMakeLists.txt  LICENSE  README.md
cmake/: gtest.cmake
include/: datetime.hpp
include/datetime/: AbstractDateTime.hpp  DateTime.hpp  Timespan.hpp
include/datetimecpp/: AbstractDateTime.hpp  DateTime.hpp  LocalDateTime.hpp  Timespan.hpp
include/datetimecpp/util/: dateTimeArithmatics.hpp  operations.hpp
include/util/: constructors.hpp
src/: AbstractDateTime.cpp  LocalDateTime.cpp  Timespan.cpp  constructors.cpp  dateTimeArithmatics.cpp  operations.cpp
tests/: testTimeArithmatics.cpp
